--- a/WafferlyBackEnd/Views/Shared/_Layout.cshtml
+++ b/WafferlyBackEnd/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         <title>@ViewData["Title"] - WafferlyBackEnd</title>
 
         <environment include="Development">
-            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-united-3.3.7.css" />
             <link rel="stylesheet" href="~/css/site.css" />
         </environment>
         <environment exclude="Development">
